# DataDive_Gender

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: afrobarometer.yml  update_datadive.yml  update_poverty.yml
output/: README.md  afrobarometer_sentiment.csv  education_attainment_scatter.csv  hdr_education_connected_dot_ssa.csv  hdr_education_regions_time_series.csv  hdr_gii_bubble_latest.csv  hdr_gii_explorer.csv  hdr_gii_histogram_chart.csv  hdr_gii_histogram_continents.csv  hdr_gii_histogram_income.csv  hdr_gii_histogram_ridge.csv  hdr_gii_histogram_time_series.csv  labor_force_income.csv  labor_force_world.csv  laws_entrepreneurship_laws.csv  laws_marimekko.csv  laws_pay_laws.csv  laws_workplace_laws.csv  mmr_line_decrease_in_mmr.csv  mmr_pictogram_SSA_rest_of_world.csv  mmr_pictogram_low_middle_income.csv  mmr_pictogram_world.csv  parliament_participation_beeswarm.csv  poverty_change_line.csv  poverty_pictogram_all_years.csv  poverty_pictogram_increase_2019.csv  unpaid_work.csv
raw_data/: README.md  mmr2020_country_estimates.csv  mmr2020_region_estimates.csv  unwomen_pardee_poverty.csv  world_bank_wdi.csv
scripts/: README.md  common.py
scripts/charts/: education.py  employment.py  employment_charts.py  hdr.py  legislation.py  legislative_charts.py  maternal_mortality.py  poverty.py  update_charts.py
scripts/extraction_tools/: afrobarometer.py  extract_data.py  extract_poverty.py  hdi_indices.py  hdr.py  ilo.py  mmr2020.py  pardee_unwomen_poverty.py  uis_education.py  world_bank.py
