[tool.poetry]
name = "datadive-gender"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "datadive_gender"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
bblocks = "^0.5.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
